--- a/client/package.json
+++ b/client/package.json
@@ -12,11 +12,12 @@
   "dependencies": {
     "axios": "^0.18.0",
     "buefy": "^0.6.6",
-    "vue": "^2.5.2",
+    "vue": "^2.5.16",
     "vue-axios": "^2.1.2",
     "vue-backtotop": "^1.3.12",
     "vue-meta": "^1.5.2",
-    "vue-router": "^3.0.1"
+    "vue-router": "^3.0.1",
+    "vue2-animate": "^2.0.0"
   },
   "devDependencies": {
     "autoprefixer": "^7.1.2",
